--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,7 @@
 // config
 @import "config/variables.scss";
 @import "config/mixins.scss";
+@import "config/fonts.scss";
 
 // blocks
+@import "blocks/page";
