--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 
-  font-family: "opensans", Arial, sans-serif;
+  font-family: "opensans", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
