--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -2,9 +2,9 @@
   margin: 0;
   padding: 0;
 
-  font-family: "opensans", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
+  font-family: "Opensans", "Arial", sans-serif;
   color: $blue;
 }
