--- a/source/sass/config/fonts.scss
+++ b/source/sass/config/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "opensans";
+  font-family: "Opensans";
   src: url("../../fonts/opensans.woff") format("woff");
   src: url("../../fonts/opensans.woff2") format("woff2");
   font-weight: 400;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: "opensans";
+  font-family: "Opensans";
   src: url("../../fonts/opensansbold.woff") format("woff");
   src: url("../../fonts/opensansbold.woff2") format("woff2");
   font-weight: 700;
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-  font-family: "opensans";
+  font-family: "Opensans";
   src: url("../../fonts/opensanslight.woff") format("woff");
   src: url("../../fonts/opensanslight.woff2") format("woff2");
   font-weight: 300;
