--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,5 +6,6 @@
 // blocks
 @import "blocks/page.scss";
 @import "blocks/header.scss";
+@import "blocks/logo.scss";
 @import "blocks/menu-list.scss";
 @import "blocks/main-nav.scss";
