--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,5 +7,6 @@
 @import "blocks/page.scss";
 @import "blocks/header.scss";
 @import "blocks/logo.scss";
-@import "blocks/menu-list.scss";
+@import "blocks/menu-burger.scss";
 @import "blocks/main-nav.scss";
+@import "blocks/menu-list.scss";
