--- a/source/sass/blocks/menu-burger.scss
+++ b/source/sass/blocks/menu-burger.scss
@@ -7,4 +7,12 @@
 
 .menu-burger__icon {
   fill: #ffffff;
+
+  &:hover {
+    fill: $pink;
+  }
+
+  &:active {
+    fill: rgba($pink, 0.3%);
+  }
 }
