Добавляет цветовую переменную и ссылку на скачмваниеприложения

--- a/source/sass/blocks/menu-list.scss
+++ b/source/sass/blocks/menu-list.scss
@@ -19,7 +19,7 @@
   font-weight: 700;
   line-height: 32px;
   font-family: "Opensans", "Arial", sans-serif;
-  color: #ffffff;
+  color: $white;
   text-decoration: none;
   text-transform: uppercase;
 
