Переносит блок visually-hidden и wrapper в отдельный блок

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -5,5 +5,10 @@
 }
 
 .intro__download {
+  width: 320px;
+  margin: 0 auto;
+  padding: 0 20px;
   padding-top: 462px;
+
+  box-sizing: border-box;
 }
