--- a/source/sass/config/scaffolding.scss
+++ b/source/sass/config/scaffolding.scss
@@ -14,3 +14,11 @@ input[type="radio"].visually-hidden {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.wrapper {
+  width: 320px;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  box-sizing: border-box;
+}
