--- a/source/sass/blocks/app.scss
+++ b/source/sass/blocks/app.scss
@@ -1,27 +1,5 @@
 .app__link {
-  display: block;
-  padding: 20px 35px;
-
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 18px;
-  text-align: center;
-  color: $white;
-  text-decoration: none;
-
-  border: 3px solid $white;
-  border-radius: 35px;
-
-  &:hover,
-  &:focus {
-    color: $pink;
-
-    background-color: $white;
-  }
-
-  &:active {
-    color: rgba($pink, 0.3%);
-  }
+  margin-bottom: 30px;
 }
 
 .app__list {
