Добавляет блок link

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,4 +15,5 @@
 // blocks index.html
 @import "blocks/intro.scss";
 @import "blocks/app.scss";
+@import "blocks/link.scss";
 @import "blocks/information.scss";
