Добавляет базовую стилизацию блока table и добавляет отступы кнопкам слайдера

--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -4,4 +4,11 @@
 
 .price__wrapper {
   padding-top: 90px;
+  padding-bottom: 40px;
+}
+
+.price__toggles {
+  margin: 0;
+
+  text-align: center;
 }
