--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,4 +1,5 @@
 .reviews__list {
+  margin-bottom: 20px;
   padding-top: 45px;
 }
 
@@ -25,5 +26,8 @@
 }
 
 .reviews__toggles {
+  margin: 0;
+  margin-bottom: 40px;
+
   text-align: center;
 }
