Добавляет базовую стилизацию блоку footer и корректирует блок logo

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,6 @@
 @import "blocks/price.scss";
 @import "blocks/table.scss";
 @import "blocks/contacts.scss";
+
+// blocks footer
+@import "blocks/footer.scss";
