--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,5 +22,7 @@
 @import "blocks/table.scss";
 @import "blocks/contacts.scss";
 
+// blocks photo.html
+
 // blocks footer
 @import "blocks/footer.scss";
