Добавляет базовую стилизацию блоку intro-photo

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/contacts.scss";
 
 // blocks photo.html
+@import "blocks/intro-photo.scss";
 
 // blocks footer
 @import "blocks/footer.scss";
