Корректирует ширину блока wrapper

--- a/source/sass/config/scaffolding.scss
+++ b/source/sass/config/scaffolding.scss
@@ -16,7 +16,7 @@ input[type="radio"].visually-hidden {
 }
 
 .wrapper {
-  width: 320px;
+  min-width: 320px;
   margin: 0 auto;
   padding: 0 20px;
 
