--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,8 @@
 
 // blocks photo.html
 @import "blocks/intro-photo.scss";
+@import "blocks/photo-content.scss";
+@import "blocks/post.scss";
 
 // blocks footer
 @import "blocks/footer.scss";
