Добавляет базовую стилизацию блокам buttons и photo-editor

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,8 @@
 @import "blocks/intro-photo.scss";
 @import "blocks/photo-content.scss";
 @import "blocks/post.scss";
+@import "blocks/photo-editor.scss";
+@import "blocks/buttons.scss";
 
 // blocks footer
 @import "blocks/footer.scss";
