--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,11 +23,14 @@
 @import "blocks/contacts.scss";
 
 // blocks photo.html
-@import "blocks/intro-photo.scss";
+@import "blocks/intro-inner.scss";
 @import "blocks/photo-content.scss";
 @import "blocks/post.scss";
 @import "blocks/photo-editor.scss";
 @import "blocks/buttons.scss";
+
+// blocks form.html
+
 
 // blocks footer
 @import "blocks/footer.scss";
