--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,7 +30,7 @@
 @import "blocks/buttons.scss";
 
 // blocks form.html
-
+@import "blocks/form.scss";
 
 // blocks footer
 @import "blocks/footer.scss";
