Изменяет блок form на competition

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,7 @@
 @import "blocks/buttons.scss";
 
 // blocks form.html
+@import "blocks/competition.scss";
 @import "blocks/form.scss";
 
 // blocks footer
