--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 // blocks form.html
 @import "blocks/competition.scss";
 @import "blocks/form.scss";
+@import "blocks/data.scss";
 
 // blocks footer
 @import "blocks/footer.scss";
