--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -51,8 +51,14 @@
 .form__textarea {
   width: 280px;
   min-height: 200px;
-  padding: 22px;
+  padding: 20px;
   box-sizing: border-box;
 
   resize: none;
+}
+
+::placeholder {
+  font-size: 18px;
+  line-height: 30px;
+  color: $blue;
 }
