--- a/source/sass/blocks/buttons.scss
+++ b/source/sass/blocks/buttons.scss
@@ -7,7 +7,6 @@
   line-height: 18px;
   text-align: center;
 
-
   background-color: transparent;
   border-radius: 35px;
 
@@ -51,5 +50,33 @@
 
       background-color: rgba($blue, 0.3%);
     }
+  }
+}
+
+.button {
+  width: 280px;
+  padding: 15px 20px;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 30px;
+  color: $white;
+  text-align: center;
+  text-transform: uppercase;
+
+  background-color: $green;
+  border: none;
+
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background-color: #1c9b5e;
+  }
+
+  &:active {
+    color: rgba($white, 0.3%);
+
+    background-color: #1c9b5e;
   }
 }
