Корректирует базовую стилизацию блоков buttons, competition, data и form

--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -9,6 +9,10 @@
   text-align: center;
 }
 
+.competition__footer {
+  padding-top: 40px;
+}
+
 .competition__description-simbol {
   color: $pink;
 }
