--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -10,8 +10,10 @@
 }
 
 .form__legend {
+  margin: 0;
   margin-bottom: 35px;
 
+  font: inherit;
   line-height: 18px;
   color: $pink;
   text-align: center;
@@ -54,7 +56,21 @@
   padding: 20px;
   box-sizing: border-box;
 
+  border: 2px solid #e5e5e5;
+  border-radius: 2px;
+
   resize: none;
+
+  &:hover,
+  &:focus {
+    border: 2px solid $blue;
+
+    outline: none;
+  }
+
+  &--active {
+    border: 2px solid $pink;
+  }
 }
 
 ::placeholder {
