--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,7 @@
 @import "blocks/competition.scss";
 @import "blocks/form.scss";
 @import "blocks/data.scss";
+@import "blocks/modal.scss";
 
 // blocks footer
 @import "blocks/footer.scss";
