--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -11,16 +11,13 @@
 }
 
 .contacts__list {
-  margin: 0;
-  padding: 0;
-
-  text-align: center;
-
-  list-style: none;
+  @include list;
 }
 
 .contacts__item {
   margin-bottom: 25px;
+
+  text-align: center;
 }
 
 .contacts__title {
