--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -5,7 +5,7 @@
   border: none;
 
   &--gray {
-    background-color: #f2f2f2;
+    background-color: $gray;
   }
 }
 
@@ -29,10 +29,7 @@
 }
 
 .form__list {
-  margin: 0;
-  padding: 0;
-
-  list-style: none;
+  @include list;
 }
 
 .form__item {
@@ -53,7 +50,7 @@
 .form__textarea {
   width: 280px;
   min-height: 200px;
-  padding: 20px;
+  padding: 18px;
   box-sizing: border-box;
 
   border: 2px solid #e5e5e5;
