--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -1,5 +1,5 @@
 .price {
-  background-image: linear-gradient(-5deg, #f2f2f2 91%, $white 0%);
+  background-image: linear-gradient(-5deg, $gray 91%, $white 0%);
 }
 
 .price__wrapper {
