--- a/source/sass/config/mixins.scss
+++ b/source/sass/config/mixins.scss
@@ -1,6 +1,14 @@
 @mixin circle($width, $color) {
   width: $width;
   height: $width;
-  border-radius: $width/2;
+
   background-color: $color;
+  border-radius: $width/2;
+}
+
+@mixin list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
 }
