Добавляет верные пути к файлам

--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -39,7 +39,7 @@
 .information__img {
   height: 280px;
 
-  background-image: url("../../img/iphone-screen-mobile@1x.png");
+  background-image: url("../img/iphone-screen-mobile@1x.png");
   background-position: 50% 0;
   background-repeat: no-repeat;
 }
