--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,7 +1,7 @@
 .intro {
   min-height: 462px;
 
-  background: url("../../img/iphone-hand-mobile@1x.png") 0 176px no-repeat, url("../../img/bg-back-mobile@1x.jpg") 0 0 no-repeat;
+  background: url("../img/iphone-hand-mobile@1x.png") 0 176px no-repeat, url("../img/bg-back-mobile@1x.jpg") 0 0 no-repeat;
   background-color: $blue;
 }
 
