--- a/source/sass/blocks/data.scss
+++ b/source/sass/blocks/data.scss
@@ -31,4 +31,10 @@
   &--active {
     border: 2px solid $pink;
   }
+
+  &::placeholder {
+    font-size: 18px;
+    line-height: 30px;
+    color: $blue;
+  }
 }
