--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -6,3 +6,9 @@
 .main__contacts {
   padding-top: 40px;
 }
+
+.main__intro-inner {
+  padding-top: 100px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
