--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: rgba(#000000, 0.3%);
+  background-color: rgba($header-background-color, 0.3%);
 }
 
 .header__logo {
