--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -5,24 +5,24 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
-  color: $white;
+  color: $button-text-color;
   text-align: center;
   text-transform: uppercase;
 
-  background-color: $green;
+  background-color: $button-background-color;
   border: none;
 
   cursor: pointer;
 
   &:hover,
   &:focus {
-    background-color: #1c9b5e;
+    background-color: $button-action-background-color;
   }
 
   &:active {
-    color: rgba($white, 0.3%);
+    color: rgba($button-action-text-color, 0.3%);
 
-    background-color: #1c9b5e;
+    background-color: $button-action-background-color;
   }
 
   &--disabled {
