--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -25,6 +25,6 @@
 .contacts__link {
   font-size: 24px;
   font-weight: 300;
-  color: $pink;
+  color: $contacts-link-text-color;
   text-decoration: none;
 }
