--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -2,7 +2,7 @@
   min-height: 462px;
 
   background: url("../img/iphone-hand-mobile@1x.png") 0 176px no-repeat, url("../img/bg-back-mobile@1x.jpg") 0 0 no-repeat;
-  background-color: $blue;
+  background-color: $intro-background-color;
 }
 
 .intro__download {
