--- a/source/sass/blocks/menu-burger.scss
+++ b/source/sass/blocks/menu-burger.scss
@@ -6,13 +6,13 @@
 }
 
 .menu-burger__icon {
-  fill: $white;
+  fill: $header-icon-color;
 
   &:hover {
-    fill: $pink;
+    fill: $header-icon-action-color;
   }
 
   &:active {
-    fill: rgba($pink, 0.3%);
+    fill: rgba($header-icon-action-color, 0.3%);
   }
 }
