--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -5,6 +5,6 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
-  font-family: "Opensans", "Arial", sans-serif;
-  color: $blue;
+  font-family: $main-font;
+  color: $main-text-color;
 }
