Добавляет цветовую переменную и определяет её в блоках

--- a/source/sass/blocks/data.scss
+++ b/source/sass/blocks/data.scss
@@ -18,7 +18,7 @@
   padding: 14px 22px;
   box-sizing: border-box;
 
-  border: 2px solid #e5e5e5;
+  border: 2px solid $form-element-decor-color;
   border-radius: 2px;
 
   &:hover,
