--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -26,7 +26,7 @@
   }
 
   &--disabled {
-    background-color: #e5e5e5;
+    background-color: $button-disables-background-color;
   }
 
   &--margin {
