--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -53,7 +53,7 @@
   padding: 18px;
   box-sizing: border-box;
 
-  border: 2px solid #e5e5e5;
+  border: 2px solid $form-element-decor-color;
   border-radius: 2px;
 
   resize: none;
