--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -8,6 +8,7 @@ $green: #2aab6d;
 $darkgreen: #1c9b5e;
 $white: #ffffff;
 $gray: #f2f2f2;
+$darkgray: #e5e5e5;
 $black: #000000;
 
 // variables for applying colors
@@ -60,6 +61,7 @@ $fieldset-background-color: $gray;
 $legend-text-color: $pink;
 $form-element-action-color: $blue;
 $form-element-modify-color: $pink;
+$form-element-decor-color: $darkgray;
 $form-label-text-color: $pink;
 $form-element-placeholder-color: $blue;
 
@@ -67,3 +69,4 @@ $button-text-color: $white;
 $button-action-text-color: $white;
 $button-background-color: $green;
 $button-action-background-color: $darkgreen;
+$button-disables-background-color: $darkgray;
