Добавляет цветовую переменную для блока modal

--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -70,3 +70,5 @@ $button-action-text-color: $white;
 $button-background-color: $green;
 $button-action-background-color: $darkgreen;
 $button-disables-background-color: $darkgray;
+
+$modal-title-color: $black;
