Подключает normalize.scss через npm

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,5 @@
 // config
+@import "../../node_modules/normalize-scss/sass/normalize/_import-now.scss";
 @import "config/fonts.scss";
 @import "config/variables.scss";
 @import "config/mixins.scss";
