--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -1,3 +1,8 @@
+// Resolutions
+$desktop: 1200px;
+$tablets: 660px;
+$phones: 320px;
+
 // variables for applying font
 $main-font: "Opensans", "Arial", sans-serif;
 
