Добавляет минимальную ширину блоку page и корректирует блок wrapper

--- a/source/sass/config/scaffolding.scss
+++ b/source/sass/config/scaffolding.scss
@@ -16,9 +16,7 @@ input[type="radio"].visually-hidden {
 }
 
 .wrapper {
-  min-width: 320px;
+  width: 280px;
   margin: 0 auto;
   padding: 0 20px;
-
-  box-sizing: border-box;
 }
