Выстраивает адаптивную сетку блока intro

--- a/source/sass/blocks/app.scss
+++ b/source/sass/blocks/app.scss
@@ -1,3 +1,15 @@
+.app {
+  width: 280px;
+
+  @include tablets() {
+    width: 620px;
+  }
+
+  @include desktop() {
+    width: 940px;
+  }
+}
+
 .app__link {
   margin-bottom: 30px;
 }
