--- a/source/sass/config/scaffolding.scss
+++ b/source/sass/config/scaffolding.scss
@@ -19,4 +19,8 @@ input[type="radio"].visually-hidden {
   width: 280px;
   margin: 0 auto;
   padding: 0 20px;
+
+  @include tablets() {
+    width: 620px;
+  }
 }
