--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -15,24 +15,64 @@
   text-align: center;
 }
 
-.information__wrapper {
-  @include tablets() {
-    display: flex;
-  }
-}
-
 .information__list {
+  background-image: url("../img/iphone-screen-mobile@1x.png");
+  background-position: 50% 110%;
+  background-repeat: no-repeat;
+
   @include list;
   padding-top: 50px;
+  padding-bottom: 280px;
 
   @include tablets() {
-    flex-basis: 310px;
-    order: 1;
+    padding-bottom: 0;
+
+    background-position: 0 140%;
+  }
+
+  @include desktop() {
+    display: flex;
+
+    background-image: none;
   }
 }
 
 .information__item {
+  position: relative;
+
   text-align: center;
+
+  @include tablets() {
+    width: 310px;
+    margin-left: auto;
+    padding-bottom: 0;
+
+    text-align: left;
+  }
+
+  @include desktop() {
+    margin-left: 0;
+    padding-top: 340px;
+
+    text-align: center;
+
+    background-image: url("../img/iphone-screen-mobile@1x.png");
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+
+    &::before {
+      content: "";
+      position: absolute;
+      right: 9%;
+      top: 58%;
+
+      width: 265px;
+      height: 60px;
+
+      background-color: #f2f2f2;
+      box-shadow: 0 -3px 0 0 #000000;
+    }
+  }
 }
 
 .information__title {
@@ -45,16 +85,4 @@
 .information__description {
   margin: 0;
   margin-bottom: 30px;
-}
-
-.information__img {
-  height: 280px;
-
-  background-image: url("../img/iphone-screen-mobile@1x.png");
-  background-position: 50% 0;
-  background-repeat: no-repeat;
-
-  @include tablets() {
-    flex-basis: 310px;
-  }
 }
