--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,6 +5,7 @@
 .header__wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 20px;
 
   @include tablets() {
