--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/slider.scss";
 @import "blocks/tariff-selection.scss";
 @import "blocks/contacts.scss";
+@import "blocks/map.scss";
 
 // blocks photo.html
 @import "blocks/intro-inner.scss";
