--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,8 +1,21 @@
+.footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 280px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 .footer__logo {
   padding-top: 35px;
 }
 
 .footer__list {
+  display: flex;
+  justify-content: space-around;
+  width: 200px;
+
   @include list;
   padding-top: 35px;
 
@@ -10,7 +23,13 @@
 }
 
 .footer__copyright {
-  padding-top: 35px;
+  display: flex;
+  align-items: center;
+  padding: 40px 0;
 
   text-align: center;
+}
+
+.copyright__link {
+  height: 34px;
 }
