--- a/source/sass/blocks/intro-inner.scss
+++ b/source/sass/blocks/intro-inner.scss
@@ -5,6 +5,10 @@
   background-position: 0 0;
   background-repeat: no-repeat;
   background-color: $intro-background-color;
+
+  @include tablets() {
+    min-height: 395px;
+  }
 }
 
 .intro-inner__title {
@@ -15,4 +19,12 @@
   line-height: 30px;
   color: $intro-text-color;
   text-align: center;
+
+  @include tablets() {
+    width: 620px;
+    margin: 0 auto;
+
+    font-size: 50px;
+    line-height: 50px;
+  }
 }
