Выстраивает адаптивную сетку блоков photo-content и post

--- a/source/sass/blocks/post.scss
+++ b/source/sass/blocks/post.scss
@@ -2,6 +2,11 @@
   display: block;
 }
 
+.post__photo {
+  width: 100%;
+  height: auto;
+}
+
 .post__description {
   margin: 0;
   padding: 20px 18px;
