--- a/source/sass/blocks/photo-content.scss
+++ b/source/sass/blocks/photo-content.scss
@@ -1,5 +1,26 @@
+.photo-content__wrapper {
+  width: 280px;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  @include tablets() {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 620px;
+  }
+
+  @include desktop() {
+    width: 940px;
+  }
+}
+
 .photo-content__item {
   margin-bottom: 20px;
+
+  @include tablets() {
+    flex-basis: 300px;
+  }
 }
 
 .photo-content__item--margin {
