--- a/source/sass/blocks/buttons.scss
+++ b/source/sass/blocks/buttons.scss
@@ -1,3 +1,10 @@
+.buttons {
+  @include desktop() {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .buttons__item {
   width: 280px;
   padding: 16px 20px;
@@ -50,5 +57,10 @@
 
       background-color: rgba($reset-action-background-color, 0.3%);
     }
+  }
+
+  @include desktop() {
+    width: 184px;
+    margin: 0;
   }
 }
