Корректирует отображение поля формы о приложении

--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -62,7 +62,7 @@ $reset-action-text-color: $blue;
 $reset-action-background-color: $blue;
 
 // variables for applying colors form.html
-$fieldset-background-color: $gray;
+$fieldset-border-color: $darkgray;
 $legend-text-color: $pink;
 $form-element-action-color: $blue;
 $form-element-modify-color: $pink;
