--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,18 +1,26 @@
 .form {
   display: flex;
   flex-direction: column;
+
+  background-image: linear-gradient(to bottom, #ffffff 20%, #f2f2f2 20%, #f2f2f2 50%, #ffffff 50%, #ffffff 62%, #f2f2f2 62%, #f2f2f2 78%, #ffffff 78%);
+
+  @include tablets() {
+    background-image: linear-gradient(to bottom, #ffffff);
+  }
 }
 
 .form__fieldset {
   padding: 40px 0;
+  margin: 0 20px;
+
 
   border: none;
 
-  &--background-color {
-    background-color: $fieldset-background-color;
-  }
-
   @include tablets() {
+    margin-bottom: 50px;
+
+    border: 2px solid $fieldset-border-color;
+
     &--order-first {
       order: -3;
     }
@@ -25,11 +33,15 @@
       order: -1;
     }
   }
+
+  &--border-none {
+    border: none;
+  }
 }
 
 .form__legend {
   margin: 0;
-  margin-bottom: 35px;
+  padding: 0 15px;
 
   font: inherit;
   line-height: 18px;
@@ -39,6 +51,10 @@
 
   &--hidden {
     display: none;
+
+    @include tablets() {
+      display: block;
+    }
   }
 
   &--margin {
@@ -63,6 +79,10 @@
 
   font-size: 18px;
   line-height: 30px;
+
+  @include tablets() {
+    padding-left: 120px;
+  }
 }
 
 .form__textarea {
