--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -31,9 +31,13 @@
 }
 
 .competition__footer {
-  padding-top: 40px;
-}
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 20px;
 
-.competition__description-simbol {
-  color: $pink;
+  @include tablets() {
+    justify-content: space-between;
+  }
 }
