--- a/source/sass/blocks/data.scss
+++ b/source/sass/blocks/data.scss
@@ -9,6 +9,10 @@
     display: flex;
     align-items: center;
     margin-bottom: 50px;
+
+    &--position {
+      flex-wrap: wrap;
+    }
   }
 }
 
@@ -18,9 +22,18 @@
   line-height: 30px;
   color: $form-label-text-color;
 
+  text-transform: uppercase;
+
   @include tablets() {
     margin-right: 20px;
     padding: 0;
+
+    &--order {
+      flex-basis: 100%;
+      order: 1;
+      margin-right: 0;
+      padding-left: 20px;
+    }
   }
 }
 
