--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -35,6 +35,7 @@
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+  width: 100%;
   margin: 0 20px;
 
   @include tablets() {
