--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,18 +1,23 @@
 .form {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
 
   background-image: linear-gradient(to bottom, #ffffff 20%, #f2f2f2 20%, #f2f2f2 50%, #ffffff 50%, #ffffff 62%, #f2f2f2 62%, #f2f2f2 78%, #ffffff 78%);
 
   @include tablets() {
     background-image: linear-gradient(to bottom, #ffffff);
   }
+
+  @include desktop() {
+    width: 940px;
+    margin: 0 auto;
+  }
 }
 
 .form__fieldset {
+  width: 100%;
   padding: 40px 0;
   margin: 0 20px;
-
 
   border: none;
 
@@ -22,20 +27,35 @@
 
     border: 2px solid $fieldset-border-color;
 
-    &--order-first {
+    &--user {
       order: -3;
     }
 
-    &--order-second {
+    &--app {
       order: -2;
     }
 
-    &--order-third {
+    &--contacts {
       order: -1;
+    }
+
+    @include desktop() {
+      margin-right: 0;
+      margin-left: 0;
+
+      &--user {
+        flex-basis: 435px;
+        margin-right: auto;
+      }
+
+      &--app {
+        flex-basis: 435px;
+        padding: 0;
+      }
     }
   }
 
-  &--border-none {
+  &--user {
     padding-right: 0;
     padding-left: 0;
     border: none;
@@ -67,6 +87,13 @@
 
 .form__list {
   @include list;
+
+  @include desktop() {
+    &--achievement {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
 }
 
 .form__item {
@@ -74,6 +101,13 @@
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  @include desktop() {
+    &--achievement {
+      flex-basis: 260px;
+      flex-grow: 1;
+    }
   }
 }
 
