Выстраивает адаптивную сетку поля textarea в блоке form для десктопной версии

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -145,6 +145,10 @@
     line-height: 30px;
     color: $form-element-placeholder-color;
   }
+
+  @include desktop() {
+    min-height: 125px;
+  }
 }
 
 .form__description {
