--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -2,6 +2,26 @@
   padding-top: 40px;
 
   box-shadow: 0 9px 25px 5px #e2e2e2;
+
+  @include tablets() {
+    width: 460px;
+    margin: 0 auto;
+  }
+}
+
+.modal-show {
+  background-image: linear-gradient(to bottom, #ffffff 60%, #f2f2f2 60%);
+}
+
+.modal__wrapper {
+  width: 280px;
+  margin: 0 auto;
+
+  @include tablets() {
+    width: 320px;
+
+    text-align: center;
+  }
 }
 
 .modal__title {
@@ -19,11 +39,4 @@
   margin-bottom: 40px;
 
   text-align: center;
-}
-
-.modal__button {
-  margin: 0;
-  padding: 50px 0;
-
-  background-color: $gray;
 }
