--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -7,6 +7,16 @@
     width: 460px;
     margin: 0 auto;
   }
+
+  @include desktop() {
+    width: 780px;
+  }
+}
+
+.modal-error {
+  @include desktop() {
+    background-image: linear-gradient(to bottom, #ffffff 60%, #f2f2f2 60%);
+  }
 }
 
 .modal-show {
@@ -21,6 +31,14 @@
     width: 320px;
 
     text-align: center;
+  }
+
+  @include desktop() {
+    width: 410px;
+
+    &--show {
+      width: 460px;
+    }
   }
 }
 
