Выстраивает адаптивную сетку внутри блока post

--- a/source/sass/blocks/photo-content.scss
+++ b/source/sass/blocks/photo-content.scss
@@ -9,13 +9,17 @@
 .photo-content__item {
   margin-bottom: 20px;
 
+  background-color: $photo-background-color;
+
   @include tablets() {
     flex-basis: 300px;
   }
 }
 
-.photo-content__item--margin {
-  margin: 0;
+.photo-content__item-panorama {
+  margin-bottom: 20px;
+
+  background-color: $white;
 }
 
 .photo-content__header {
