--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -46,6 +46,8 @@ $tariff-selection-header-text-color: $white;
 $contacts-link-text-color: $pink;
 
 // variables for applying colors photo.html
+$photo-background-color: $gray;
+
 $post-background-color: $gray;
 $post-like-text-color: $pink;
 
