--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -42,6 +42,7 @@ $link-background-action-color: $white;
 $tariff-selection-background-color: $white;
 $tariff-selection-header-background-color: $blue;
 $tariff-selection-header-text-color: $white;
+$tariff-selection-border-color: $darkgray;
 
 $contacts-link-text-color: $pink;
 
