--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,4 +1,6 @@
 .main-nav {
+  position: relative;
+
   background-color: $nav-background-color;
 
   @include desktop() {
@@ -6,25 +8,71 @@
   }
 }
 
-.main-nav__close {
+.main-nav__menu {
+  padding: 20px;
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 22px;
+  right: 20px;
+  z-index: 2;
+
+  display: block;
+  width: 50px;
+  height: 25px;
+
   background-color: transparent;
-  border: none;
 
   cursor: pointer;
-
-  @include desktop() {
-    display: none;
-  }
+  border: none;
 }
 
-.main-nav__close-icon {
-  fill: $header-icon-color;
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
 
-  &:hover {
-    fill: $header-icon-action-color;
-  }
+  position: absolute;
+  top: 0;
+  right: 0;
 
-  &:active {
-    fill: rgba($header-icon-action-color, 0.3%);
-  }
+  width: 50px;
+  height: 4px;
+
+  background-color: $header-icon-color;
+  box-shadow: 0 10px 0 0 #ffffff, 0 20px 0 0 #ffffff;
 }
+
+.main-nav--closed .main-nav__toggle:hover::before,
+.main-nav--closed .main-nav__toggle:focus::before {
+  background-color: $header-icon-action-color;
+  box-shadow: 0 10px 0 0 $header-icon-action-color, 0 20px 0 0 $header-icon-action-color;
+}
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: rgba($header-icon-action-color, 0.3%);
+  box-shadow: 0 10px 0 0 rgba($header-icon-action-color, 0.3%), 0 20px 0 0 rgba($header-icon-action-color, 0.3%);
+}
+// .menu-burger__icon {
+//   fill: $header-icon-color;
+
+//   &:hover {
+//     fill: $header-icon-action-color;
+//   }
+
+//   &:active {
+//     fill: rgba($header-icon-action-color, 0.3%);
+//   }
+// }
+
+// стили для крестика
+// .main-nav__close-icon {
+//   fill: $header-icon-color;
+
+//   &:hover {
+//     fill: $header-icon-action-color;
+//   }
+
+//   &:active {
+//     fill: rgba($header-icon-action-color, 0.3%);
+//   }
+// }
