--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -89,3 +89,9 @@
 .main-nav--opened .main-nav__toggle:active::after {
   background-color: rgba($header-icon-action-color, 0.3%);
 }
+
+.main-nav--closed .main-nav__list {
+  @include mobile-tablets() {
+    display: none;
+  }
+}
