--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -3,13 +3,23 @@
 
   background-color: $nav-background-color;
 
-  @include desktop() {
+  @include laptop-min() {
     display: flex;
+    align-items: center;
+    width: 940px;
+    margin: 0 auto;
+    padding-top: 26px;
+    padding-bottom: 42px;
   }
 }
 
 .main-nav__menu {
   padding: 20px;
+
+  @include laptop-min() {
+    margin-right: auto;
+    padding: 0;
+  }
 }
 
 .main-nav__toggle {
@@ -26,6 +36,10 @@
 
   cursor: pointer;
   border: none;
+
+  @include laptop-min() {
+    display: none;
+  }
 }
 
 .main-nav--closed .main-nav__toggle::before {
@@ -91,7 +105,7 @@
 }
 
 .main-nav--closed .main-nav__list {
-  @include mobile-tablets() {
+  @include laptop-max() {
     display: none;
   }
 }
@@ -101,7 +115,7 @@
 }
 
 .main-nav--nojs .main-nav__list {
-  @include mobile-tablets() {
+  @include laptop-max() {
     display: block;
   }
 }
