--- a/source/sass/blocks/menu-list.scss
+++ b/source/sass/blocks/menu-list.scss
@@ -5,8 +5,13 @@
 
   border-bottom: 1px solid $menu-decor-color;
 
-  @include desktop() {
+  @include laptop-min() {
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 630px;
+
+    border: none;
   }
 }
 
@@ -16,8 +21,12 @@
   border-top: 1px solid #485461;
   box-shadow: 0 -1px 0 0 $menu-decor-color;
 
-  @include desktop() {
+  @include laptop-min() {
+    display: flex;
     padding: 0;
+
+    border: none;
+    box-shadow: none;
   }
 }
 
@@ -36,5 +45,12 @@
 
   &:active {
     color: rgba($menu-text-action-color, 0.3%);
+  }
+
+  @include laptop-min() {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    text-transform: none;
   }
 }
