Добавляет базовую стилизацию для планшетной версии

--- a/source/sass/blocks/app.scss
+++ b/source/sass/blocks/app.scss
@@ -6,6 +6,22 @@
   }
 }
 
+.app__slogan {
+  display: none;
+
+  @include tablets() {
+    display: block;
+    margin: 0;
+    margin-bottom: 35px;
+
+    font-size: 40px;
+    font-weight: 300;
+    line-height: 40px;
+    color: $app-text-color;
+    text-align: center;
+  }
+}
+
 .app__link {
   margin-bottom: 30px;
 }
@@ -19,5 +35,9 @@
 
   font-weight: 300;
   text-align: center;
-  color: #eaeaeb;
+  color: $app-text-color;
+
+  @include tablets() {
+    font-size: 18px;
+  }
 }
