--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -35,6 +35,8 @@ $menu-text-color: $white;
 $menu-text-action-color: $pink;
 
 // variables for applying colors index.html
+$app-text-color: $white;
+
 $link-text-color: $white;
 $link-decor-color: $white;
 $link-text-action-color: $pink;
