--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -17,6 +17,10 @@
 }
 
 .effect__title {
+  margin: 0;
+  margin-bottom: 15px;
+  padding-right: 105px;
+
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
