--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -13,6 +13,17 @@
   font-size: 24px;
   font-weight: 300;
   text-align: center;
+
+  @include tablets() {
+    margin-bottom: 0;
+
+    font-size: 40px;
+    line-height: 40px;
+
+    &--padding {
+      padding: 0 30px;
+    }
+  }
 }
 
 .information__list {
